# allinweb

./: .env.example  .gitignore  Dockerfile  OPERATIONS.md  README.md  astro.config.ts  benchmark.py  benchmark_baseline.json  benchmark_upgraded.json  config.py  deploy.sh  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  sync.sh
.github/workflows/: deploy.yml
chefmate/: context_budget.py  conversation.py  feedback.py  generator.py  indexer.py  loader.py  metrics.py  persistence.py  query_analyzer.py  query_router.py  retriever.py  security.py  server.py  test_all.py  test_chunking.py  test_comprehensive.py  test_new_features.py  validator.py
chefmate-graphrag/: .env.example  Dockerfile  config.py  docker-compose.yml  pyproject.toml  server.py
chefmate-graphrag/generation/: context_budget.py  generator.py
chefmate-graphrag/graph/: builder.py  data_preparation.py  extractor.py  importer.py  schema.py
chefmate-graphrag/retrieval/: graph_rag.py  hybrid.py  query_router.py
chefmate-graphrag/scripts/: build_graph.py
chefmate-graphrag/shared/: conversation.py  metrics.py  validator.py
chefmate-graphrag/tests/: test_builder.py  test_extractor.py
docs/superpowers/plans/: 2026-05-18-deploy-review.md  2026-05-18-graphrag-dumbness-analysis.md  2026-05-18-graphrag-improvement-plan.md  2026-05-18-production-deploy.md  2026-05-19-tencent-deploy.md
src/: config.ts
src/pages/: chefmate-graphrag.astro  chefmate-v2.astro  chefmate.astro  index.astro
src/styles/: global.css
vector_index/: index.faiss  index.pkl  parent_child_map.pkl
(+34 files in other folders)
