[project]
name = "vincentbuilds"
version = "1.0.0"
description = "Vincent Hu 个人网站 + ChefMate RAG 演示"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.26",
    "langchain-huggingface>=0.3.1",
    "langchain-text-splitters>=0.3.8",
    "langchain-community>=0.3.27",
    "faiss-cpu>=1.7.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "openai>=1.86.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "slowapi>=0.1.9",
]

[tool.uv]
package = false
