[project]
name = "chefmate-graphrag"
version = "0.1.0"
description = "ChefMate GraphRAG - Knowledge Graph RAG Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "slowapi>=0.1.9",
    "neo4j>=5.0.0",
    "pymilvus>=2.5.0",
    "openai>=1.86.0",
    "langchain-core>=0.3.0",
    "langchain-huggingface>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-community>=0.3.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
